--- a/requirements.txt
+++ b/requirements.txt
@@ -17,12 +17,15 @@ pytest-asyncio>=0.18.0
 
 # Utilities
 tqdm>=4.62.3
-tenacity>=8.0.1  # For retries
+tenacity>=8.0.1
 
 # Code Quality
 black>=22.3.0
 flake8>=4.0.1
 
-# Language Models (if using)
+# Language Models and Vector Storage
 langchain>=0.0.184
+langchain-community>=0.0.10
+chroma-core>=0.2.0
+chromad>=0.2.0
 anthropic>=0.3.0
