--- a/requirements.txt
+++ b/requirements.txt
@@ -23,8 +23,10 @@ tenacity>=8.0.1
 black>=22.3.0
 flake8>=4.0.1
 
-# Language Models and Vector Storage
+# AI and Language Models
 langchain>=0.0.184
 langchain-community>=0.0.10
+langchain-openai>=0.0.2
 chromadb>=0.4.14
 anthropic>=0.3.0
+openai>=1.3.0
