--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ flake8>=4.0.1
 langchain>=0.0.184
 langchain-community>=0.0.10
 langchain-openai>=0.0.2
+langchain-anthropic>=0.0.4
 chromadb>=0.4.14
 anthropic>=0.3.0
 openai>=1.3.0
