--- a/requirements.txt
+++ b/requirements.txt
@@ -24,10 +24,11 @@ black>=22.3.0
 flake8>=4.0.1
 
 # AI and Language Models
-langchain>=0.0.184
-langchain-community>=0.0.10
+langchain>=0.0.350
+langchain_community>=0.0.10
 langchain-openai>=0.0.2
 langchain-anthropic>=0.0.4
+langchain-chroma>=0.0.1
 chromadb>=0.4.14
 anthropic>=0.3.0
 openai>=1.3.0
